[gd_scene load_steps=30 format=3 uid="uid://detwugmh7s3a5"]

[ext_resource type="Script" uid="uid://w7r1sofajft7" path="res://Scripts/Enemy.gd" id="1_xeo28"]
[ext_resource type="Texture2D" uid="uid://dc705a8pa5p2t" path="res://Assets/Ghost1.png" id="2_kpr8r"]
[ext_resource type="PackedScene" uid="uid://b4srmaopuu1r8" path="res://Scenes/hand.tscn" id="3_1exfc"]
[ext_resource type="AudioStream" uid="uid://0h52kid7ob6" path="res://Assets/Sounds/ghost.wav" id="4_kpr8r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r1vq8"]
atlas = ExtResource("2_kpr8r")
region = Rect2(512, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gett"]
atlas = ExtResource("2_kpr8r")
region = Rect2(544, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qqvr"]
atlas = ExtResource("2_kpr8r")
region = Rect2(576, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccgoa"]
atlas = ExtResource("2_kpr8r")
region = Rect2(608, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyqjc"]
atlas = ExtResource("2_kpr8r")
region = Rect2(640, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_docpl"]
atlas = ExtResource("2_kpr8r")
region = Rect2(672, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmjo2"]
atlas = ExtResource("2_kpr8r")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs4v3"]
atlas = ExtResource("2_kpr8r")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l38y1"]
atlas = ExtResource("2_kpr8r")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_of1qn"]
atlas = ExtResource("2_kpr8r")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5luw"]
atlas = ExtResource("2_kpr8r")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yek70"]
atlas = ExtResource("2_kpr8r")
region = Rect2(160, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg5ug"]
atlas = ExtResource("2_kpr8r")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsyok"]
atlas = ExtResource("2_kpr8r")
region = Rect2(224, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvdm0"]
atlas = ExtResource("2_kpr8r")
region = Rect2(256, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vitjd"]
atlas = ExtResource("2_kpr8r")
region = Rect2(288, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf858"]
atlas = ExtResource("2_kpr8r")
region = Rect2(320, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wtkq"]
atlas = ExtResource("2_kpr8r")
region = Rect2(352, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7hvi"]
atlas = ExtResource("2_kpr8r")
region = Rect2(384, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpcr6"]
atlas = ExtResource("2_kpr8r")
region = Rect2(416, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovn73"]
atlas = ExtResource("2_kpr8r")
region = Rect2(448, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tr1s"]
atlas = ExtResource("2_kpr8r")
region = Rect2(480, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_r1vq8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1vq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gett")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qqvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccgoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyqjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_docpl")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmjo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs4v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l38y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of1qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5luw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yek70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg5ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsyok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvdm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vitjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf858")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wtkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7hvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpcr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovn73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tr1s")
}],
"loop": false,
"name": &"spawn",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpr8r"]
radius = 19.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_us3a4"]
radius = 9.0
height = 36.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_xeo28")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -21)
sprite_frames = SubResource("SpriteFrames_r1vq8")
animation = &"death"
autoplay = "spawn"
frame = 5
frame_progress = 1.0

[node name="CollisionWalls" type="CollisionShape2D" parent="."]
position = Vector2(0, -22)
shape = SubResource("CircleShape2D_kpr8r")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -21)
collision_layer = 8
collision_mask = 0

[node name="CollisionHit" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_us3a4")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
avoidance_layers = 16
avoidance_mask = 16
debug_enabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -14)
enabled = false
target_position = Vector2(0, 0)
collision_mask = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Timer2" type="Timer" parent="."]

[node name="Spawn" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="hand" parent="." instance=ExtResource("3_1exfc")]
visible = false
position = Vector2(8, -19)
spread = 0.0

[node name="hand2" parent="." instance=ExtResource("3_1exfc")]
visible = false
position = Vector2(-9, -20)
spread = 0.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kpr8r")
volume_db = -20.0
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
